--- a/nnbasics-loop.ipynb
+++ b/nnbasics-loop.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "243ca42e",
+   "id": "e3c78175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "            eta = len(pos)*100/len(test)\n",
     "            #time.sleep(1)\n",
     "            print(colored (i, 'green'), alpha, len(test), colored(eta, 'red'))\n",
+    "            display(colored (i, 'green'), alpha, len(test), colored(eta, 'red'))\n",
     "        else:\n",
     "            pass\n",
     "else:\n",
@@ -41,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ec57055",
+   "id": "1e829a51",
    "metadata": {},
    "outputs": [],
    "source": []
